--- a/website/djb_samples/js_sample.html
+++ b/website/djb_samples/js_sample.html
@@ -2,6 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
     <head>
         <title>Sample</title>
+        <link rel="stylesheet" type="text/css" href="js_sample.css"/>
         <script type="text/javascript" src="js_sample.js">/**/</script>
     </head>
     <body>
